--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,110 @@
+@charset "UTF-8";
+
 * {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  box-sizing: border-box;
+  font-family: var(--font-family);
+  padding: var(--spacing);
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+:root {
+  --spacing: 1rem;
+  --max-width: 56rem;
+  --image-max-width: 750px;
+  --font-size-button: 1rem;
+  --font-family: -system-ui, -apple-system, blinkmacsystemfont, "Segoe UI",
+    roboto, oxygen, ubuntu, cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  --color-light-gray: #f5f5f5;
+  --color-background-zebra: var(--color-light-gray);
+}
+
+.hidden {
+  /* Viljum að þetta feli alltaf element, notum því !important */
+  display: none !important;
+}
+
+input,
+textarea,
+button {
+  font-size: inherit;
+}
+
+button {
+  padding: 0.25rem 0.5rem;
+}
+
+/*
+#root {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing);
+  margin: var(--spacing) auto;
+  padding-inline: var(--spacing);
+  max-width: var(--max-width);
+}
+  */
+
+main,
+section,
+.content {
+  display: flex;
+  flex-flow: column wrap;
+  gap: calc(0.5 * var(--spacing));
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+  margin-left: var(--spacing);
+}
+
+.choices {
+  list-style-type: none;
+  gap: 0.5rem;
+  margin-left: 0;
+}
+
+.choices label {
+  display: flex;
+  gap: 0.25rem;
+}
+
+.correct-answer {
+  background-color: #d4edda;
+  color: #155724;
+}
+
+.wrong-answer {
+  background-color: #f8d7da;
+  color: #721c24;
+}
+
+img {
+  width: 90%;
+  max-width: var(--image-max-width);
+}
+
+@media (width <= 370px) {
+  h1 {
+    font-size: 24px;
+  }
+}
+
+.keyword-item {
+  margin-bottom: calc(1.5 * var(--spacing));
+}
+
+.keyword-item h3 {
+  margin-top: var(--spacing);
 }
